export declare type AvailableParametersResponse = {
  moves: string[];
  algorithms: string[];
};
